# JPdict-App

./: .gitignore  Cargo.toml  README.md  build.rs  dictionary.db  index.html  tauri.conf.json
assets/: new_term_bank_1.json  new_term_bank_10.json  new_term_bank_11.json  new_term_bank_12.json  new_term_bank_13.json  new_term_bank_14.json  new_term_bank_15.json  new_term_bank_16.json  new_term_bank_17.json  new_term_bank_18.json  new_term_bank_19.json  new_term_bank_2.json  new_term_bank_20.json  new_term_bank_21.json  new_term_bank_22.json  new_term_bank_23.json  new_term_bank_24.json  new_term_bank_25.json  new_term_bank_26.json  new_term_bank_27.json  new_term_bank_28.json  new_term_bank_29.json  new_term_bank_3.json  new_term_bank_30.json  new_term_bank_31.json  new_term_bank_32.json  new_term_bank_33.json  new_term_bank_34.json  new_term_bank_4.json  new_term_bank_5.json  new_term_bank_6.json  new_term_bank_7.json  new_term_bank_8.json  new_term_bank_9.json  test_term_bank_2.json
src/: db.rs  dictionary.db  dictionary.rs  main.rs  ui.rs
src/db/: db_setup.rs  mod.rs  utils.rs
src/ui/: app.rs  constants.rs  favorite.rs  mod.rs  search.rs  styles.rs
