[package]
name = "jpdict"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[package.metadata]
windows_subsystem = "windows"

[dependencies]
eframe = "0.27.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
once_cell = "1.19.0"
image = "0.24.9"
arboard = "3.4.0"

[[bin]]
name = "JPDict"
path = "src/main.rs"

[build-dependencies]
winres = "0.1.12"